panel refactoring, for smaller footprint

--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -11,7 +11,7 @@ news: true
 
     <!-- description -->
     <div class="col-md-12">
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
         <figure style="float:left; padding:0.5em; margin-right:10px; ">
 					<img class="figure-img img-responsive rounded" style="width:250px; height:300px;" src={% cloudinary /img/officials/PatrickVaughan.png %}</img>
 					<figcaption class="figure-caption text-center">Assessor Patrick Vaughan</figcaption>
@@ -26,9 +26,9 @@ news: true
     </div>
 
     <div class="container col-md-6" id="notices">
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
         <div class="panel-heading">
-          <h3 class="text-center">Notices</h3>
+          <h3 class="panel-title text-center">Notices</h3>
         </div>
         <div class="list-group">
           <div id="assrNotice" class="list-group-item"></div>
@@ -36,9 +36,9 @@ news: true
       </div>
     </div>
     <div class="container col-md-6" id="news">
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
         <div class="panel-heading">
-          <h3 class="text-center">News</h3>
+          <h3 class="panel-title text-center">News</h3>
         </div>
         <div class="list-group">
           <div id="assrNews" class="list-group-item"></div>
@@ -51,9 +51,9 @@ news: true
   <!-- services -->
   <div class="col-md-4">
     {% include contactBlock.html %}
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="text-center">Our Services</h3>
+        <h3 class="panel-title text-center">Our Services</h3>
       </div>
       <div class="list-group">
         <li class="list-group-item text-center">Property Appraisals</li>
@@ -63,9 +63,9 @@ news: true
     </div>
 
     <!-- additional information -->
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="text-center">Additional Information</h3>
+        <h3 class="panel-title text-center">Additional Information</h3>
       </div>
       <div class="list-group">
         <a href="assessorfaq.html" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Assessor FAQ</a>
@@ -76,9 +76,9 @@ news: true
     </div>
 
     <!-- forms -->
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <h4 class=" text-center">Assessor Forms and Files</h4>
+        <h4 class="panel-title text-center">Assessor Forms and Files</h4>
       </div>
       <div class="list-group">
         <div id="assessorDir" class="list-group-item"></div>
