--- a/_pages/dept/court_assisstance/home.html
+++ b/_pages/dept/court_assisstance/home.html
@@ -10,7 +10,7 @@ tree: true
   <div class="col-md-8">
     <!-- Department Description -->
     <div class="col-md-12">
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
         <p class="panel-body">This office provides the public self-help access to legal information, social services, and assistance with standard court forms for routine civil cases in state court.
           This office does not provide services for post-conviction criminal matters or cases against Latah County.</p>
           <p class="panel-body">This office deals with cases in State courts. To access information about Idaho's Federal Courts, including frequently asked questions about bankruptcy, please see <a href="https://www.id.uscourts.gov">www.id.uscourts.gov</a>.</p>
@@ -19,7 +19,7 @@ tree: true
       <!-- End Description -->
       <div class="col-md-12">
         <div class="panel-group" id="accordion">
-          <div class="panel panel-default">
+          <div class="panel panel-primary">
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
@@ -37,7 +37,7 @@ tree: true
             </div>
           </div>
 
-          <div class="panel panel-default">
+          <div class="panel panel-primary">
             <div class="panel-heading" id="caseTypes">
               <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
@@ -64,7 +64,7 @@ tree: true
             </div>
           </div>
 
-          <div class="panel panel-default">
+          <div class="panel panel-primary">
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
@@ -79,7 +79,7 @@ tree: true
             </div>
           </div>
 
-          <div class="panel panel-default">
+          <div class="panel panel-primary">
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
@@ -148,7 +148,7 @@ tree: true
 
 
         <!-- forms -->
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
           <div class="panel-heading">
             <h4 class=" text-center">Court Assistance Forms and Files</h4>
           </div>
@@ -168,7 +168,7 @@ tree: true
     <!-- services -->
     <div class="col-md-4">
       {% include contactBlock.html %}
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
         <div class="panel-heading">
           <h3 class="text-center">Our Services</h3>
         </div>
