--- a/_pages/dept/dmv/home.html
+++ b/_pages/dept/dmv/home.html
@@ -9,7 +9,7 @@ news: true
 	<div class="col-md-8">
     <!-- Department Description -->
     <div class="col-md-12">
-			<div class="panel panel-default">
+			<div class="panel panel-primary">
 				<p class="panel-body">Administered by the <a href="/assessor/">County Assessor</a>, the Motor Vehicle Licensing office transfers titles and registrations on new, used and out-of-state automobiles and manufactured homes, collects sales tax on private sales and out-of-state dealers, registers and titles recreational vehicles and vessels, adds liens and clears titles, and registers previously owned vehicles, and when necessary, performs Vehicle Identification Number (VIN) inspections. This department is located at the Latah County Annex at 200 S. Almon Street in Moscow.</p>
 			</div>
     </div>
@@ -17,9 +17,9 @@ news: true
 
   <!-- Notices and News -->
     <div class="container col-md-6" id="notices">
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
         <div class="panel-heading">
-          <h3 class="text-center">Notices</h3>
+          <h3 class="panel-title text-center">Notices</h3>
         </div>
         <div class="list-group">
         	<div id="dmvNotice" ></div>
@@ -27,9 +27,9 @@ news: true
       </div>
     </div>
     <div class="container col-md-6" id="news">
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
         <div class="panel-heading">
-          <h3 class="text-center">News</h3>
+          <h3 class="panel-title text-center">News</h3>
         </div>
         <div class="list-group">
 					<div id="dmvNews" ></div>
@@ -41,9 +41,9 @@ news: true
   <div class="col-md-4">
     {% include contactBlock.html %}
     <!-- services -->
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="text-center">Our Services</h3>
+        <h3 class="panel-title text-center">Our Services</h3>
       </div>
       <div class="list-group">
         <li class="list-group-item text-center">Title Transfers & Registration</li>
@@ -53,9 +53,9 @@ news: true
     </div>
 
     <!-- additional information -->
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="text-center">Additional Information</h3>
+        <h3 class="panel-title text-center">Additional Information</h3>
       </div>
           <div class="list-group">
           <a href="vehicleregfaq.html" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Vehicle Registration & Titles FAQ</a>
