--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -10,7 +10,7 @@ util: true
 <div class="row">
 	<!-- Department Description -->
 	<div class="col-md-8 hidden-xs">
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<p class="panel-body">
 				The County Planning and Building Department administers the county's land use and development ordinances and reviews applications for conditional use permits, subdivisions and zone changes for presentation to the Planning Commission, Zoning Commission and the Board of County Commissioners. The department provides assistance with various land use issues and ensures compliance with existing regulations. Other functions of this department include the enforcement of adopted building code regulations, and providing assistance with community development projects.
 			</p>
@@ -20,11 +20,11 @@ util: true
 	<div class="col-md-4">
 	{% include contactBlock.html %}
 	<!-- Services -->
-  	<div class="panel panel-default">
+  	<div class="panel panel-primary">
   		<div class="panel-heading">
-				<h3 class="text-center">Our Services</h3>
+				<h3 class="panel-title text-center">Our Services</h3>
 			</div>
-  		<div class="list-group">
+  		<div class="list-group text-center">
       	<li class="list-group-item">Mapping</li>
       	<li class="list-group-item">Building Permits</li>
       	<li class="list-group-item">Home Inspections</li>
@@ -36,9 +36,9 @@ util: true
 <!-- Handouts and Notices -->
 <div class="row">
 	<div class="col-md-6">
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h4 class=" text-center"> Applications &amp; Handouts</h4>
+				<h3 class="panel-title text-center"> Applications &amp; Handouts</h4>
 			</div>
 			<div class="list-group">
 				<div id="pbDir" class="list-group-item"></div>
@@ -55,9 +55,9 @@ util: true
 	<!-- End Handouts and Notices -->
 	<!-- Upcoming Events -->
 	<div class="col-md-6">
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h4 class="text-center">Upcoming Events</h4>
+				<h4 class="panel-title text-center">Upcoming Events</h4>
 			</div>
 			<div class="list-group">
 				<div id='loading'>loading...</div>
@@ -69,13 +69,13 @@ util: true
 	<!-- End Upcoming Events -->
 	<!-- Meeting Notice Signup -->
 	<div class=" col-md-6 text-center">
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<!-- Button trigger modal -->
 			<a href="#myModal" data-toggle="modal">
 				<div class="panel-heading">
-					<h4>
+					<h3 class="panel-title text-center">
 						Signup for Meeting Notices
-					</h4>
+					</h3>
 				</div>
 			</a>
 		</div>
