--- a/_pages/dept/sheriff/home.html
+++ b/_pages/dept/sheriff/home.html
@@ -10,7 +10,7 @@ news: true
 	<div class="col-md-8">
 		<!-- Department Description -->
 		<div class="col-md-12">
-			<div class="panel panel-default">
+			<div class="panel panel-primary">
 				<figure style="float:left; padding:0.5em; margin-right:10px; ">
 					<img class="figure-img img-responsive rounded" style="width:250px; height:300px;" src={% cloudinary /img/officials/RichardSkiles.png %}</img>
 					<figcaption class="figure-caption text-center">Sheriff Richard Skiles</figcaption>
@@ -31,7 +31,7 @@ news: true
 		<div class="container col-md-6" id="notices">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h3 class="text-center">Notices</h3>
+					<h3 class="panel-title text-center">Notices</h3>
 				</div>
 				<div class="list-group">
 					<div id="sheriffNotice" ></div>
@@ -41,7 +41,7 @@ news: true
 		<div class="container col-md-6" id="news">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h3 class="text-center">News</h3>
+					<h3 class="panel-title text-center">News</h3>
 				</div>
 				<div class="list-group">
 					<div id="sheriffNews" ></div>
@@ -63,7 +63,7 @@ news: true
 			<!-- forms -->
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h4 class=" text-center">Sheriff Office Forms and Files</h4>
+					<h4 class="panel-title text-center">Sheriff Office Forms and Files</h4>
 				</div>
 				<div class="list-group">
 					<div id="sheriffDir"></div>
@@ -103,7 +103,7 @@ news: true
 		<!-- additional information menu -->
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h3 class="text-center">Additional Information</h3>
+				<h3 class="panel-title text-center">Additional Information</h3>
 			</div>
 			<div class="list-group">
 				<a href="civil.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Civil Office</a>
