--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -12,7 +12,7 @@ news: true
 		<div class="col-md-12">
 			<div class="alert alert-danger" role="alert">This site concerns RURAL county residences only. For assistance with a residence inside a city limit please call City Hall.
 			</div>
-			<div class="panel panel-default">
+			<div class="panel panel-primary">
 				<p class="panel-body">
 					Under the supervision of the County Commissioners the Solid Waste office sets fees and negotiates contracts with government and private entities. Billing procedures and collection of fees are managed by the Solid Waste Department. We strive to resolve problems incurred by ratepayers with payments or with any of the services included.<br><br>
 					Solid waste fees are <b>Mandatory</b>. The Latah County Solid Waste Ordinance states maintenance and operation of the rural solid waste collection system shall be funded by assessment and collection of a fee imposed upon all premises in Latah County, except those located within the corporate limits of any city.<br><br>
@@ -26,9 +26,9 @@ news: true
 		<!-- End Description -->
 
 		<div class="container col-md-6" id="notices">
-			<div class="panel panel-default">
+			<div class="panel panel-primary">
 				<div class="panel-heading">
-					<h3 class="text-center">Notices</h3>
+					<h3 class="panel-title text-center">Notices</h3>
 				</div>
 				<div class="list-group">
 					<div id="swNotice" ></div>
@@ -36,9 +36,9 @@ news: true
 			</div>
 		</div>
 		<div class="container col-md-6" id="news">
-			<div class="panel panel-default">
+			<div class="panel panel-primary">
 				<div class="panel-heading">
-					<h3 class="text-center">News</h3>
+					<h3 class="panel-title text-center">News</h3>
 				</div>
 				<div class="list-group">
 					<div id="swNews" ></div>
@@ -48,7 +48,7 @@ news: true
 
 		<div class="col-md-12">
 
-			<div class="panel panel-default" >
+			<div class="panel panel-primary" >
 				<div class="panel-heading">
 					<h3 class="panel-title">The Latah Sanitation, Inc. Transfer Station disposal site</h3>
 				</div>
@@ -59,7 +59,7 @@ news: true
 			</div>
 
 
-			<div class="panel panel-default">
+			<div class="panel panel-primary">
 				<div class="panel-heading">
 					<h3 class="panel-title">Special Events</h3>
 				</div>
@@ -77,9 +77,9 @@ news: true
 	<div class="col-md-4">
 		{% include contactBlock.html %}
 		<!-- Services -->
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h3 class="text-center">Our Services</h3>
+				<h3 class="panel-title text-center">Our Services</h3>
 			</div>
 			<div class="list-group">
 				<li class="list-group-item text-center">Manage Solid Waste Fees</li>
@@ -91,9 +91,9 @@ news: true
 
 		<!-- additional information menu -->
 		<!-- <div class="col-md-4"> -->
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h3 class="text-center">Additional Information</h3>
+				<h3 class="panel-title text-center">Additional Information</h3>
 			</div>
 			<div class="list-group">
 				<a href="billing.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Billing Procedures</a>
@@ -113,9 +113,9 @@ news: true
 		</div>
 
 		<!-- forms -->
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h4 class=" text-center">Solid Waste Forms and Files</h4>
+				<h4 class="panel-title text-center">Solid Waste Forms and Files</h4>
 			</div>
 			<div class="list-group">
 				<div id="swDir"></div>
