--- a/_pages/dept/auditor/home.html
+++ b/_pages/dept/auditor/home.html
@@ -22,9 +22,9 @@ news: true
 		<!-- End Description -->
 
 		<div class="container col-md-6" id="notices">
-			<div class="panel panel-default">
+			<div class="panel panel-primary">
 				<div class="panel-heading">
-					<h3 class="text-center">Notices</h3>
+					<h3 class="panel-title text-center">Notices</h3>
 				</div>
 				<div class="list-group">
 					<div id="audNotice" ></div>
@@ -32,9 +32,9 @@ news: true
 			</div>
 		</div>
 		<div class="container col-md-6" id="news">
-			<div class="panel panel-default">
+			<div class="panel panel-primary">
 				<div class="panel-heading">
-					<h3 class="text-center">News</h3>
+					<h3 class="panel-title text-center">News</h3>
 				</div>
 				<div class="list-group">
 					<div id="audNews" ></div>
@@ -46,9 +46,9 @@ news: true
 	<div class="col-md-4">
 		{% include contactBlock.html %}
 		<!-- Services -->
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h3 class="text-center">Our Services</h3>
+				<h3 class="panel-title text-center">Our Services</h3>
 			</div>
 			<div class="list-group">
 				<li class="list-group-item text-center">Marriage License</li>
@@ -60,9 +60,9 @@ news: true
 
 		<!-- additional information menu -->
 		<!-- <div class="col-md-4"> -->
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h3 class="text-center">Additional Information</h3>
+				<h3 class="panel-title text-center">Additional Information</h3>
 			</div>
 			<div class="list-group">
 				<a href="billing.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Billing Procedures</a>
