--- a/_pages/dept/building_grounds/home.html
+++ b/_pages/dept/building_grounds/home.html
@@ -9,7 +9,7 @@ permalink: /building_grounds/
   <div class="col-md-8">
     <!-- Department Description -->
     <div class="">
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
         <div class="panel-body text-justify">
           <p>
             Under the supervision of the Board of Commissioners, this department is responsible for maintenance of the Courthouse necessary to provide a safe and comfortable environment for the public and employees. This includes janitorial duties of all types inside the building and grounds care outside as well as parking lot maintenance such as snow removal, etc. This department also cares for the Courthouse Annex, the County Fairgrounds and the historic McConnell Mansion.
@@ -24,9 +24,9 @@ permalink: /building_grounds/
   <div class="col-md-4">
     {% include contactBlock.html %}
     <!-- Services -->
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="text-center">Our Services</h3>
+        <h3 class="panel-title text-center">Our Services</h3>
       </div>
       <div class="list-group">
         <li class="list-group-item text-center">Housekeeping</li>
