--- a/_pages/dept/district_court/home.html
+++ b/_pages/dept/district_court/home.html
@@ -36,12 +36,12 @@ permalink: /district_court/
   <div class="col-md-4">
     {% include contactBlock.html %}
     <!-- Services -->
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="text-center">Our Services</h3>
+        <h3 class="panel-title text-center">Our Services</h3>
       </div>
       <div class="list-group">
-        <li class="list-group-item text-center" >Court Document Processing and Retention</li>
+        <li class="list-group-item text-center">Court Document Processing and Retention</li>
         <li class="list-group-item text-center">Clerk Services for Court Proceedings</li>
         <li class="list-group-item text-center">Accounting</li>
         <li class="list-group-item text-center">Juror Management</li>
