--- a/_pages/dept/prosecutor/home.html
+++ b/_pages/dept/prosecutor/home.html
@@ -66,9 +66,9 @@ permalink: /prosecutor/
   <div class="col-md-4">
     {% include contactBlock.html %}
     <!-- Services -->
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="text-center">Our Services</h3>
+        <h3 class="panel-title text-center">Our Services</h3>
       </div>
       <div class="list-group">
         <li class="list-group-item text-center">Child Protection Cases</li>
