--- a/_pages/dept/surveyor/home.html
+++ b/_pages/dept/surveyor/home.html
@@ -6,7 +6,7 @@ permalink: /surveyor/
 <div class="row">
   <!-- Department Description -->
   <div class="col-md-8 hidden-xs">
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-body text-justify">
         <p>
           The County Surveyor's Department...
@@ -26,9 +26,9 @@ permalink: /surveyor/
   <div class="col-md-4">
     {% include contactBlock.html %}
     <!-- Services -->
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="text-center">Our Services</h3>
+        <h3 class="panel-title text-center">Our Services</h3>
       </div>
       <div class="list-group">
         <li class="list-group-item">Plat Checking</li>
