--- a/_pages/dept/treasurer/home.html
+++ b/_pages/dept/treasurer/home.html
@@ -8,7 +8,7 @@ tree: true
 	<div class="col-md-8">
 		<!-- Department Description -->
 		<div class="col-md-12">
-			<div class="panel panel-default">
+			<div class="panel panel-primary">
 				<figure style="float:left; padding:0.5em; margin-right:10px; ">
 					<img class="figure-img img-responsive rounded" style="width:250px; height:300px;" src={% cloudinary /img/officials/LoisReed.png %}</img>
 					<figcaption class="figure-caption text-center">Treasurer Lois Reed</figcaption>
@@ -49,9 +49,9 @@ tree: true
 	<div class="col-md-4">
 		{% include contactBlock.html %}
 		<!-- Services -->
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h3 class="text-center">Our Services</h3>
+				<h3 class="panel-title text-center">Our Services</h3>
 			</div>
 			<div class="list-group">
 				<li class="list-group-item text-center">Tax Collection</li>
@@ -61,9 +61,9 @@ tree: true
 		</div>
 
 		<!-- additional information menu -->
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h3 class="text-center">Additional Information</h3>
+				<h3 class="panel-title text-center">Additional Information</h3>
 			</div>
 			<div class="list-group">
 			<a href="https://latahcountyid.viewyourinfo.com" data-remote="false" class="list-group-item list-link text-center">Sign Up for Paperless Tax Statements</a>
@@ -76,9 +76,9 @@ tree: true
 			</div>
 		</div>
 
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
       <div class="panel-heading">
-        <h4 class=" text-center">Treasurer Forms and Files</h4>
+        <h4 class="panel-title text-center">Treasurer Forms and Files</h4>
       </div>
       <div class="list-group">
         <div id="treasurerDir" class="list-group-item"></div>
