--- a/_pages/dept/court_assisstance/home.html
+++ b/_pages/dept/court_assisstance/home.html
@@ -150,7 +150,7 @@ tree: true
         <!-- forms -->
         <div class="panel panel-primary">
           <div class="panel-heading">
-            <h4 class=" text-center">Court Assistance Forms and Files</h4>
+            <h4 class="panel-title text-center">Court Assistance Forms and Files</h4>
           </div>
           <div class="list-group">
             <div id="caoDir"></div>
@@ -170,7 +170,7 @@ tree: true
       {% include contactBlock.html %}
       <div class="panel panel-primary">
         <div class="panel-heading">
-          <h3 class="text-center">Our Services</h3>
+          <h3 class="panel-title text-center">Our Services</h3>
         </div>
         <div class="list-group">
           <li class="list-group-item text-center">Attorney Information</li>
