--- a/_pages/dept/weed_control/home.html
+++ b/_pages/dept/weed_control/home.html
@@ -127,7 +127,7 @@ permalink: /weed_control/
       <div class="panel-heading">
         <hd class="panel-title text-center">Our Services</hd>
       </div>
-      <div class="list-group">
+      <div class="list-group text-center">
         <li class="list-group-item">Inspecting Lands for Compliance</li>
         <li class="list-group-item">Checking for New Weed Invasions</li>
         <li class="list-group-item">Advising on Noxious Weed Control</li>
