--- a/_pages/dept/court_assisstance/home.html
+++ b/_pages/dept/court_assisstance/home.html
@@ -66,7 +66,7 @@ tree: true
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                  Standard Assistance Forms and Instructions
+                  Statewide Approved Court Forms Site
                 </a>
               </h4>
             </div>
