--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -68,7 +68,7 @@ util: true
 	</div>
 	<!-- End Upcoming Events -->
 	<!-- Meeting Notice Signup -->
-	<div class=" col-md-6 text-center">
+	<div class="col-md-push-6 col-md-6 text-center">
 		<div class="panel panel-primary">
 			<!-- Button trigger modal -->
 			<a href="#myModal" data-toggle="modal">
@@ -114,7 +114,7 @@ util: true
 </div>
 
 <script type="text/javascript">
-	calendarList("ElectionsDemo",30);
+	calendarList("PlanningBuilding",30);
 </script>
 <script type="text/javascript">
 	deptTree("pbDir", "PlanningBuilding")
